--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -12,7 +12,14 @@ html {
 }
 
 body {
-    font-family: PingFang SC, Helvetica Neue, Helvetica, Arial, Hiragino Sans GB, Microsoft Yahei, \\5FAE\8F6F\96C5\9ED1, STHeiti, \\534E\6587\7EC6\9ED1, sans-serif;
+    font-family: PingFang SC,
+    Helvetica Neue,
+    Helvetica,
+    Arial,
+    Hiragino Sans GB,
+    Microsoft Yahei,
+    \\5FAE\8F6F\96C5\9ED1,
+    STHeiti, \\534E\6587\7EC6\9ED1, sans-serif;
     color: #666;
     font-size: 12px;
     padding: 0;
@@ -80,4 +87,8 @@ input[type=file],
 input[type=reset] {
     -webkit-appearance: none;
     cursor: pointer;
+}
+
+img {
+    display: block;
 }
